--- a/advice/templates/advice/advice.html
+++ b/advice/templates/advice/advice.html
@@ -4,7 +4,7 @@
 <br />
 <div class="container mt-3">
   <div class="row">
-    <div class="col-md col-lg-6 text-center">
+    <div class="col-md col-xl-6 text-center">
       <!-- Photo by <a href="https://unsplash.com/@hermez777?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Hermes Rivera</a> on <a href="https://unsplash.com/photos/man-in-black-jacket-holding-black-and-white-quote-board-0Uw43gNMwbQ?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
        -->
       <img
@@ -13,7 +13,7 @@
         class="image-high"
       />
     </div>
-    <div class="col-md col-lg-6">
+    <div class="col-md col-xl-6 w-xl-50">
       <p class="reason">
         Human trafficking and modern slavery are severe human rights violations
         affecting millions worldwide. These crimes involve exploiting
